; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_asn1_encode_test.c_do_encode_custom.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_asn1_encode_test.c_do_encode_custom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @do_encode_custom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_encode_custom(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i8* null, i8** %8, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i64 @make_custom_der(i32* %11, i8** %8, i32 0)
  store i64 %12, i64* %9, align 8
  %13 = load i64, i64* %9, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %25

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @do_encode(i32* %17, i8* %18, i64 %19, i32* %20)
  store i32 %21, i32* %10, align 4
  %22 = load i8*, i8** %8, align 8
  %23 = call i32 @OPENSSL_free(i8* %22)
  %24 = load i32, i32* %10, align 4
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %16, %15
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i64 @make_custom_der(i32*, i8**, i32) #1

declare dso_local i32 @do_encode(i32*, i8*, i64, i32*) #1

declare dso_local i32 @OPENSSL_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
